--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	<div class="futerRight">
 		<h2>Мои проекты (не комерция)</h2>
 		<div class="myFirstProgect">
-			<a href="../source/website1/Website1/index.html" target="blank"><img src="img/avatar.jpg" alt=""></a>
-			<a href="../source/World war 2/World war/index.html" target="blank"> <img src="img/avatar.jpg" alt=""></a>
+			<a href="../source/website1/Website1/index.html" target="blank" class="myWork"><img src="img/website1.jpg" alt="" class="myWorkImg"></a>
+			<a href="../source/World war 2/World war/index.html" target="blank" class="myWork"> <img src="img/worldwar2.jpg" alt=""class="myWorkImg"></a>
 
 		</div>
 		
