--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="bodyTop">
 			<h1>Приветствую , я Web Frontend Developer trainee </h1>
 	</div>
-	<div class="bodyImg"><img src="img/Layer_17.png" class="bodyShadow">
+	<div class="bodyImg"><img src="img/rome-sunset.jpg" class="bodyShadow">
 				</div>
 	<div class="bodyButton">
 		<img src="img/avatar.jpg" alt="" class="avatar">
