--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<header>
 		<div class="logo"></div>
 		<div class="hederBody" 	>
-			<a href="index.html" target="blank">Home      |</a>
-			<a href="index.html" target="blank">      About me      |</a>
-			<a href="index.html" target="blank">      Portfolio      |</a>
-			<a href="index.html" target="blank">      Contact</a>
+			<a href="index.html" target="blank" class="menu">Home      |</a>
+			<a href="index.html" target="blank" class="menu">      About me      |</a>
+			<a href="index.html" target="blank" class="menu">      Portfolio      |</a>
+			<a href="index.html" target="blank" class="menu">      Contact</a>
 		</div>
 
 		<div class="hederFlex">
@@ -43,7 +43,7 @@
 			<a href="../source/World war 2/World war/index.html" target="blank" class="myWork"> <img src="img/worldwar2.jpg" alt=""class="myWorkImg"></a>
 
 		</div>
-		
+		<script src="JS/script.js"></script>
 	</div>
 </footer>
 </body>
