--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <footer class="footer">
 	<div class="foterLeft">
 		<h2> Кратко о моих знаниях</h2>
-		<p> Я активно учю HTML5 и CSS3,практикуюсь в верстке ,планирую после того как закреплю знания в текстовой разметке и таблице стилей  изучить JavaScript  и React.Также хочу повысить уровень английского до intermediate,сейчас могу общаться ,читать без переводчика. </p>
+		<p> Имею базовые знания HTML5 и CSS3,изучаю JavaScript , знаю теорию о препроцесоре SCSS (практики пока не было) ,знаю теорию об адаптивной верстке но на практике пока применяю резиновую верстку . Знаю принцип подхода mobile first но пока применяю Desktop first. Имею поверхносные знания в flexbox но практики не хватает . Английским владею на базовом уровне , могу прочитать документацию либо ответить на елементарные сообщения.Работаю с макетами PSD при помощи Avocode ,c CSS и HTML Sublime Text а JavaScript на VS kode .   </p>
 	</div>
 	<div class="futerRight">
 		<h2>Мои проекты (не комерция)</h2>
