--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
 <title>Portfolio</title>
 <link rel="stylesheet" href="CSS/style.css">
-<meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width" 	>
 </head>
 <body  link="#ffcc00" vlink="#cecece" alink="#ff0000">
 	<header>
-		<div class="logo"></div>
+	
 		<div class="hederBody" 	>
-			<a href="index.html" target="blank">Home      |</a>
-			<a href="index.html" target="blank">      About me      |</a>
-			<a href="index.html" target="blank">      Portfolio      |</a>
-			<a href="index.html" target="blank">      Contact</a>
+				<div class="logo"><img src="img/d7vyves-18a6ca58-6382-4ff2-9c1e-c46a5b60c16d.png" alt="" class="logo__img"></div>
+			<div class="heder__burger">
+				<span></span>
+			</div>
+			<nav class="heder__menu">
+				<ul>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Мои контакты</a></li>
+					<li><a href="#">Текущий проект</a></li>
+					<li><a href="#">Опыт работы</a></li>
+				</ul>
+			</nav>
 		</div>
 
-		<div class="hederFlex">
-			<a href="https://www.facebook.com/oleksejgucovv/" target="blank" class="iconSocSet"> <img src="img/Layer_8.png" alt=""></a>
-			<a href="index.html" target="blank" class="iconSocSet"> <img src="img/Layer_9.png" alt=""></a>
-			<a href="index.html" target="blank" class="iconSocSet"> <img src="img/Layer_10.png" alt=""></a>
-		</div>
+		
 	</header>
 	<div class="bodyTop">
 			<h1>Приветствую , я Web Frontend Developer trainee </h1>
@@ -34,18 +39,20 @@
 <footer class="footer">
 	<div class="foterLeft">
 		<h2> Кратко о моих знаниях</h2>
-		<p> Я активно учю HTML5 и CSS3,практикуюсь в верстке ,планирую после того как закреплю знания в текстовой разметке и таблице стилей  изучить JavaScript  и React.Также хочу повысить уровень английского до intermediate,сейчас могу общаться ,читать без переводчика. </p>
+		<p> Имею базовые знания HTML5 и CSS3,изучаю JavaScript , знаю теорию о препроцесоре SCSS (практики пока не было) ,знаю теорию об адаптивной верстке но на практике пока применяю резиновую верстку . Знаю принцип подхода mobile first но пока применяю Desktop first. Имею поверхносные знания в flexbox но практики не хватает . Английским владею на базовом уровне , могу прочитать документацию либо ответить на елементарные сообщения.Работаю с макетами PSD при помощи Avocode ,c CSS и HTML Sublime Text а JavaScript на VS kode .  </p>
 	</div>
-	<div class="futerRight">
+	<div class="footerRight">
 		<h2>Мои проекты (не комерция)</h2>
 		<div class="myFirstProgect">
 			<a href="../source/website1/Website1/index.html" target="blank" class="myWork"><img src="img/website1.jpg" alt="" class="myWorkImg"></a>
 			<a href="../source/World war 2/World war/index.html" target="blank" class="myWork"> <img src="img/worldwar2.jpg" alt=""class="myWorkImg"></a>
 
 		</div>
-		
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+		<script src="JS/script.js"></script>
 	</div>
 </footer>
+
 </body>
 
 </html>
