--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 			</div>
 			<nav class="heder__menu">
 				<ul>
-					<li><a href="#">Главная</a></li>
-					<li><a href="#">Мои контакты</a></li>
-					<li><a href="#">Текущий проект</a></li>
-					<li><a href="#">Опыт работы</a></li>
+					<li><a href="index.html">Главная</a></li>
+					<li><a href="Kontakt.html">Мои контакты</a></li>
+					<li><a href="lastProgect.html">Текущий проект</a></li>
+					<li><a href="experiens.html">Опыт работы</a></li>
 				</ul>
 			</nav>
 		</div>
