--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<h2>Мои проекты (не комерция)</h2>
 		<div class="myFirstProgect">
 			<a href="source/website1/Website1/index.html" target="blank" class="myWork"><img src="img/website1.jpg" alt="" class="myWorkImg"></a>
-			<a href="source/TestWork/index.html" target="blank" class="myWork"> <img src="img/worldwar2.jpg" alt=""class="myWorkImg"></a>
+			<a href="source/TestWork/index.html" target="blank" class="myWork"> <img src="img/TestWork__screen.png" alt=""class="myWorkImg"></a>
 
 		</div>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
