--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div class="bodyImg"><img src="img/rome-sunset.jpg" class="bodyShadow">
 				</div>
 	<div class="bodyButton">
-		<img src="img/avatar.jpg" alt="" class="avatar">
+		<img src="img/MyPhoto.jpg" alt="" class="avatar">
 		<h2 class="UserName">OlekseiG</h2>
 		<h3 class="LevelSkill">Web Frontend developer trainee</h3>
 	</div>
