--- a/Kontakt.html
+++ b/Kontakt.html
@@ -16,10 +16,10 @@
 			</div>
 			<nav class="heder__menu">
 				<ul>
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="Kontakt.html">Мои контакты</a></li>
-					<li><a href="lastProgect.html">Текущий проект</a></li>
-					<li><a href="experiens.html">Опыт работы</a></li>
+					<li><a href="index.html">Main</a></li>
+					<li><a href="Kontakt.html">My contact</a></li>
+					<li><a href="lastProgect.html">Current project</a></li>
+					<li><a href="experiens.html">An expуrience</a></li>	
 				</ul>
 			</nav>
 		</div>
