--- a/lastProgect.html
+++ b/lastProgect.html
@@ -16,17 +16,17 @@
 			</div>
 			<nav class="heder__menu">
 				<ul>
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="Kontakt.html">Мои контакты</a></li>
-					<li><a href="lastProgect.html">Текущий проект</a></li>
-					<li><a href="experiens.html">Опыт работы</a></li>
+					<li><a href="index.html">Main</a></li>
+					<li><a href="Kontakt.html">My contact</a></li>
+					<li><a href="lastProgect.html">Current project</a></li>
+					<li><a href="experiens.html">An expуrience</a></li>	
 				</ul>
 			</nav>
 		</div>
 	</header>
 	<div class="body__last__progect">
-		<h2 class="progect">Мой текущий проект</h2>
-		<span>Пока я занимаюсь улучшением сайта портфолио.</span>
+		<h2 class="progect">My current project</h2>
+		<span>While I'm improving my portfolio site.</span>
 	</div>
 
 		
