--- a/experiens.html
+++ b/experiens.html
@@ -16,17 +16,17 @@
 			</div>
 			<nav class="heder__menu">
 				<ul>
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="Kontakt.html">Мои контакты</a></li>
-					<li><a href="lastProgect.html">Текущий проект</a></li>
-					<li><a href="experiens.html">Опыт работы</a></li>
+					<li><a href="index.html">Main</a></li>
+					<li><a href="Kontakt.html">My contact</a></li>
+					<li><a href="lastProgect.html">Current project</a></li>
+					<li><a href="experiens.html">An expуrience</a></li>	
 				</ul>
 			</nav>
 		</div>
 	</header>
 	
 <div class="bodyTop">
-	<p>Здесь будет отображаться опыт работы.</p>
+	<p>Work experience will be displayed here.</p>
 </div>
 		
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
