--- a/experiens.html
+++ b/experiens.html
@@ -31,9 +31,9 @@
 		
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 		<script src="JS/script.js"></script>
-	</div>
+<footer class="DawnSite">
+	<span class="year">© 2021 OleksejG. All Rights Reserved</span>
 </footer>
-
 </body>
 
 </html>
