--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		
 	</header>
-	<div class="bodyTop">
+	<div class="BodyTop">
 			<h1>Hello , i Web Frontend Developer trainee </h1>
 	</div>
 	<div class="bodyImg"><img src="img/rome-sunset.jpg" class="bodyShadow">
@@ -36,13 +36,13 @@
 		<h2 class="UserName">OlekseiG</h2>
 		<h3 class="LevelSkill">Web Frontend developer trainee</h3>
 	</div>
-<footer class="footer">
+<div class="Body">
 	<div class="foterLeft">
 		<h2 class="AboutMe">Briefly about my knowledge</h2>
 		<p>I have basic knowledge of HTML5 and CSS3, I study JavaScript, I know the theory about the SCSS preprocessor (I haven't had any practice yet), I know the theory about adaptive layout, but in practice I still use fluid layout. I know the principle of the mobile first approach, but so far I am using the Desktop first. I have a superficial knowledge of flexbox but lack of practice. I speak English at a basic level, I can read the documentation or respond to elementary messages. I work with PSD layouts using Avocode, c CSS and HTML Sublime Text and JavaScript in VS kode. </p>
 	</div>
 	<div class="footerRight">
-		<h2>My prject(no comercial)</h2>
+		<h2 class="TitleProject">My prject(no comercial)</h2>
 		<div class="myFirstProgect">
 			<a href="source/website1/Website1/index.html" target="blank" class="myWork"><img src="img/website1.jpg" alt="" class="myWorkImg"></a>
 			<a href="source/TestWork/index.html" target="blank" class="myWork"> <img src="img/TestWork__screen.png" alt=""class="myWorkImg"></a>
@@ -51,6 +51,9 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 		<script src="JS/script.js"></script>
 	</div>
+</div>
+<footer class="DawnSite">
+	<span class="year">© 2021 OleksejG. All Rights Reserved</span>
 </footer>
 
 </body>
