--- a/lastProgect.html
+++ b/lastProgect.html
@@ -32,9 +32,10 @@
 		
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 		<script src="JS/script.js"></script>
-	</div>
-</footer>
 
+<footer class="DawnSite">
+	<span class="year">© 2021 OleksejG. All Rights Reserved</span>
+</footer>
 </body>
 
 </html>
