--- a/index.html
+++ b/index.html
@@ -16,41 +16,44 @@
 			</div>
 			<nav class="heder__menu">
 				<ul>
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="Kontakt.html">Мои контакты</a></li>
-					<li><a href="lastProgect.html">Текущий проект</a></li>
-					<li><a href="experiens.html">Опыт работы</a></li>
-				</ul>
+					<li><a href="index.html">Main</a></li>
+					<li><a href="Kontakt.html">My contact</a></li>
+					<li><a href="lastProgect.html">Current project</a></li>
+					<li><a href="experiens.html">An expуrience</a></li>				
+					</ul>
 			</nav>
 		</div>
 
 		
 	</header>
-	<div class="bodyTop">
-			<h1>Приветствую , я Web Frontend Developer trainee </h1>
+	<div class="BodyTop">
+			<h1>Hello , i Web Frontend Developer trainee </h1>
 	</div>
 	<div class="bodyImg"><img src="img/rome-sunset.jpg" class="bodyShadow">
 				</div>
 	<div class="bodyButton">
-		<img src="img/avatar.jpg" alt="" class="avatar">
+		<img src="img/MyPhoto.jpg" alt="" class="avatar">
 		<h2 class="UserName">OlekseiG</h2>
 		<h3 class="LevelSkill">Web Frontend developer trainee</h3>
 	</div>
-<footer class="footer">
+<div class="Body">
 	<div class="foterLeft">
-		<h2> Кратко о моих знаниях</h2>
-		<p> Имею базовые знания HTML5 и CSS3,изучаю JavaScript , знаю теорию о препроцесоре SCSS (практики пока не было) ,знаю теорию об адаптивной верстке но на практике пока применяю резиновую верстку . Знаю принцип подхода mobile first но пока применяю Desktop first. Имею поверхносные знания в flexbox но практики не хватает . Английским владею на базовом уровне , могу прочитать документацию либо ответить на елементарные сообщения.Работаю с макетами PSD при помощи Avocode ,c CSS и HTML Sublime Text а JavaScript на VS kode .  </p>
+		<h2 class="AboutMe">Briefly about my knowledge</h2>
+		<p>I have basic knowledge of HTML5 and CSS3, I study JavaScript, I know the theory about the SCSS preprocessor (I haven't had any practice yet), I know the theory about adaptive layout, but in practice I still use fluid layout. I know the principle of the mobile first approach, but so far I am using the Desktop first. I have a superficial knowledge of flexbox but lack of practice. I speak English at a basic level, I can read the documentation or respond to elementary messages. I work with PSD layouts using Avocode, c CSS and HTML Sublime Text and JavaScript in VS kode. </p>
 	</div>
 	<div class="footerRight">
-		<h2>Мои проекты (не комерция)</h2>
+		<h2 class="TitleProject">My prject(no comercial)</h2>
 		<div class="myFirstProgect">
-			<a href="../source/website1/Website1/index.html" target="blank" class="myWork"><img src="img/website1.jpg" alt="" class="myWorkImg"></a>
-			<a href="../source/World war 2/World war/index.html" target="blank" class="myWork"> <img src="img/worldwar2.jpg" alt=""class="myWorkImg"></a>
+			<a href="source/website1/Website1/index.html" target="blank" class="myWork"><img src="img/website1.jpg" alt="" class="myWorkImg"></a>
+			<a href="source/TestWork/index.html" target="blank" class="myWork"> <img src="img/TestWork__screen.png" alt=""class="myWorkImg"></a>
 
 		</div>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 		<script src="JS/script.js"></script>
 	</div>
+</div>
+<footer class="DawnSite">
+	<span class="year">© 2021 OleksejG. All Rights Reserved</span>
 </footer>
 
 </body>
