--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body  link="#ffcc00" vlink="#cecece" alink="#ff0000">
 	<header>
-	
-		<div class="hederBody" 	>
-				<div class="logo"><img src="img/d7vyves-18a6ca58-6382-4ff2-9c1e-c46a5b60c16d.png" alt="" class="logo__img"></div>
+		<div class="AvatarJs">
+			<img src="img/MyPhoto.jpg" alt="" class="avatar1">
+		</div>
+			<div class="hederBody" >
+			<div class="logo"><img src="img/d7vyves-18a6ca58-6382-4ff2-9c1e-c46a5b60c16d.png" alt="" class="logo__img"></div>
 			<div class="heder__burger">
 				<span></span>
 			</div>
@@ -51,6 +53,7 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 		<script src="JS/script.js"></script>
 	</div>
+</div>
 </div>
 <footer class="DawnSite">
 	<span class="year">© 2021 OleksejG. All Rights Reserved</span>
